Fulfill User Story #1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <header id="header">
+      //
+    </header>
     <h1>TITLE</h1>
   </body>
 </html>
