Start working on User Story #2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header id="header">
-      //
+      <img id="header-img" src="#" alt="logo">
     </header>
     <h1>TITLE</h1>
   </body>
