--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     <header id="header">
       <img id="header-img" src="#" alt="logo">
+      <nav id="nav-bar">
+        //
+      </nav>
     </header>
     <h1>TITLE</h1>
   </body>
