--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <header id="header">
       <img id="header-img" src="#" alt="logo">
       <nav id="nav-bar">
-        //
+        <ul>
+          <li><a class="nav-link" href="#">one</a></li>
+          <li><a class="nav-link" href="#">one</a></li>
+          <li><a class="nav-link" href="#">one</a></li>
+        </ul>
       </nav>
     </header>
     <h1>TITLE</h1>
