--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
       </nav>
     </header>
     <h1>TITLE</h1>
+    <section>
+      <form id="form" action="index.html" method="post">
+        <input id="email" type="email" name="" value="" placeholder="Your Email" required>
+        <input id="submit" type="submit" name="" value="Submit">
+      </form>
+    </section>
   </body>
 </html>
