Fulfill User Story #12

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <h1>TITLE</h1>
     <section>
-      <form id="form" action="index.html" method="post">
+      <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
         <input id="email" type="email" name="" value="" placeholder="Your Email" required>
         <input id="submit" type="submit" name="" value="Submit">
       </form>
