--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header id="header">
-      <img id="header-img" src="#" alt="logo">
+      <img id="header-img" src="assets/black-garlic.png" alt="logo">
       <nav id="nav-bar">
         <ul>
           <li><a class="nav-link" href="#">one</a></li>
