--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <img id="header-img" src="assets/black-garlic.png" alt="logo">
       <nav id="nav-bar">
         <ul>
-          <li><a class="nav-link" href="#">one</a></li>
-          <li><a class="nav-link" href="#">one</a></li>
-          <li><a class="nav-link" href="#">one</a></li>
+          <a class="nav-link" href="#facts"><li>facts</li></a>
+          <a class="nav-link" href="#video"><li>video</li></a>
+          <a class="nav-link" href="#form"><li>subscribe</li></a>
         </ul>
       </nav>
     </header>
@@ -22,7 +22,7 @@
         <input id="email" type="email" name="" value="" placeholder="Your Email" required>
         <input id="submit" type="submit" name="" value="Submit">
       </form>
-      <iframe src="https://www.youtube.com/embed/uDuFURnmVlo" width="420" height="315"></iframe>
+      <iframe id="video" src="https://www.youtube.com/embed/uDuFURnmVlo" width="420" height="315"></iframe>
     </section>
   </body>
 </html>
