--- a/index.html
+++ b/index.html
@@ -6,23 +6,47 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <header id="header">
-      <img id="header-img" src="assets/black-garlic.png" alt="logo">
-      <nav id="nav-bar">
-        <ul>
-          <a class="nav-link" href="#facts"><li>facts</li></a>
-          <a class="nav-link" href="#video"><li>video</li></a>
-          <a class="nav-link" href="#form"><li>subscribe</li></a>
-        </ul>
-      </nav>
-    </header>
-    <h1>TITLE</h1>
-    <section>
-      <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
-        <input id="email" type="email" name="" value="" placeholder="Your Email" required>
-        <input id="submit" type="submit" name="" value="Submit">
-      </form>
-      <iframe id="video" src="https://www.youtube.com/embed/uDuFURnmVlo" width="420" height="315"></iframe>
-    </section>
+    <div id="content">
+
+      <header id="header">
+        <img id="header-img" src="assets/black-garlic.png" alt="logo">
+        <nav id="nav-bar">
+          <ul>
+            <a class="nav-link" href="#facts"><li>facts</li></a>
+            <a class="nav-link" href="#video"><li>video</li></a>
+            <a class="nav-link" href="#form"><li>subscribe</li></a>
+          </ul>
+        </nav>
+      </header>
+
+      <h1>TITLE</h1>
+
+      <section>
+
+        <div id="facts">
+          <p>Black garlic is a type of aged garlic whose browning is attributable
+            to Maillard reaction rather than caramelized, first used as a food
+            ingredient in Asian cuisine. It is made by heating whole bulbs of
+            garlic (<em>Allium sativum</em>) over the course of several weeks, a
+            process that results in black cloves. The taste is sweet and syrupy
+            with hints of balsamic vinegar or tamarind. Black garlic's popularity
+            has spread to the United States as it has become a sought-after 
+            ingredient used in high-end cuisine.</p>
+        </div>
+
+        <div>
+          <iframe id="video" src="https://www.youtube.com/embed/uDuFURnmVlo" width="420" height="315"></iframe>
+        </div>
+
+        <div>
+          <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
+            <input id="email" type="email" name="" value="" placeholder="Your Email" required>
+            <input id="submit" type="submit" name="" value="Submit">
+          </form>
+        </div>
+
+      </section>
+
+    </div> <!-- end of #content -->
   </body>
 </html>
