--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <div id="content">
 
       <header id="header">
+
         <img id="header-img" src="assets/black-garlic.png" alt="logo">
+
         <nav id="nav-bar">
           <ul>
             <a class="nav-link" href="#facts"><li>facts</li></a>
@@ -17,11 +19,12 @@
             <a class="nav-link" href="#form"><li>subscribe</li></a>
           </ul>
         </nav>
+
       </header>
 
-      <h1>TITLE</h1>
-
       <section>
+
+        <h1>TITLE</h1>
 
         <div id="facts">
           <p>Black garlic is a type of aged garlic whose browning is attributable
@@ -30,8 +33,26 @@
             garlic (<em>Allium sativum</em>) over the course of several weeks, a
             process that results in black cloves. The taste is sweet and syrupy
             with hints of balsamic vinegar or tamarind. Black garlic's popularity
-            has spread to the United States as it has become a sought-after 
+            has spread to the United States as it has become a sought-after
             ingredient used in high-end cuisine.</p>
+          <p>In Korea, black garlic was developed as a health product and it is
+            still perceived as such. It is sometimes added to energy drinks, and
+            in Thailand is claimed to increase the consumer's longevity. It is
+            also used to make black garlic chocolate.</p>
+          <p>Black garlic is made when heads of garlic are aged under specialized
+            conditions of heat and humidity. Bulbs are kept in a
+            humidity-controlled environment at temperatures that range from 60
+            to 77 °C (140 to 170 °F) for 60 to 90 days. There are no additives,
+            preservatives, or burning of any kind. The enzymes that give fresh
+            garlic its sharpness break down. Those conditions are thought to
+            facilitate the Maillard reaction, the chemical process that produces
+            new flavour compounds responsible for the deep taste of seared meat
+            and fried onions. The cloves turn black and develop a sticky date-like
+            texture.<br />Bacterial endophytes capable of fermentation and with
+            a strong ability of heat resistance have been identified in common in
+            garlic and black garlic. These may have relevance to black garlic
+            production.</p>
+          <p><em>Information courtesy of <a href="https://en.wikipedia.org/wiki/Black_garlic">Wikipedia</a></em></p>
         </div>
 
         <div>
