--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <p><em>Information courtesy of <a href="https://en.wikipedia.org/wiki/Black_garlic">Wikipedia</a></em></p>
         </div>
 
-        <div>
+        <div id="videoholder">
           <iframe id="video" src="https://www.youtube.com/embed/uDuFURnmVlo" width="420" height="315"></iframe>
         </div>
 
