--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
         <img id="header-img" src="assets/black-garlic.png" alt="logo">
 
+        <h1>Black Garlic</h1>
+
         <nav id="nav-bar">
           <ul>
             <a class="nav-link" href="#facts"><li>facts</li></a>
@@ -24,9 +26,7 @@
 
       <section>
 
-        <h1>TITLE</h1>
-
-        <div id="facts">
+        <div id="facts" class="chunk">
           <p>Black garlic is a type of aged garlic whose browning is attributable
             to Maillard reaction rather than caramelized, first used as a food
             ingredient in Asian cuisine. It is made by heating whole bulbs of
@@ -55,12 +55,13 @@
           <p><em>Information courtesy of <a href="https://en.wikipedia.org/wiki/Black_garlic">Wikipedia</a></em></p>
         </div>
 
-        <div id="videoholder">
+        <div id="videoholder" class="chunk">
           <iframe id="video" src="https://www.youtube.com/embed/uDuFURnmVlo" width="420" height="315"></iframe>
         </div>
 
-        <div>
+        <div id="formholder" class="chunk">
           <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
+            <p>To subscribe and learn more about black garlic, enter your email address below.</p>
             <input id="email" type="email" name="" value="" placeholder="Your Email" required>
             <input id="submit" type="submit" name="" value="Submit">
           </form>
