further adjust header placing and add stickiness

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div id="formholder" class="chunk">
           <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
             <p>To subscribe and learn more about black garlic, enter your email address below.</p>
-            <input id="email" type="email" name="" value="" placeholder="Your Email" required>
-            <input id="submit" type="submit" name="" value="Submit">
+            <input id="email" type="email" name="email" value="" placeholder="Your Email" required>
+            <input id="submit" type="submit" name="submit" value="Submit">
           </form>
         </div>
 
