add footer/credit, fix body not filling screen

--- a/index.html
+++ b/index.html
@@ -68,5 +68,10 @@
       </section>
 
     </div> <!-- end of #content -->
+
+    <footer>
+      <p id="credit">coded by <a href="https://github.com/ChiselD" target="_blank">ChiselD</a></p>
+    </footer>
+
   </body>
 </html>
