fulfill User Stories #14 and #15: add media queries

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <body>
 
     <header id="header">
-      <img id="header-img" src="assets/black-garlic.png" alt="logo">
-      <h1>Black Garlic</h1>
-      <nav id="nav-bar">
+      <div class="header-lump">
+        <img id="header-img" src="assets/black-garlic.png" alt="logo">
+        <h1>Black Garlic</h1>
+      </div>
+      <nav id="nav-bar" class="header-lump">
         <ul>
           <a class="nav-link" href="#facts"><li>facts</li></a>
           <a class="nav-link" href="#video"><li>video</li></a>
@@ -24,7 +26,7 @@
 
       <section>
 
-        <div id="facts" class="chunk">
+        <div id="facts" class="chunk cream">
           <p>Black garlic is a type of aged garlic whose browning is attributable
             to Maillard reaction rather than caramelized, first used as a food
             ingredient in Asian cuisine. It is made by heating whole bulbs of
@@ -57,7 +59,7 @@
           <iframe id="video" src="https://www.youtube.com/embed/uDuFURnmVlo" width="420" height="315"></iframe>
         </div>
 
-        <div id="formholder" class="chunk">
+        <div id="formholder" class="chunk cream">
           <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
             <p>To subscribe and learn more about black garlic, enter your email address below.</p>
             <input id="email" type="email" name="email" value="" placeholder="Your Email" required>
@@ -69,7 +71,7 @@
 
     </div> <!-- end of #content -->
 
-    <footer>
+    <footer class="cream">
       <p id="credit">coded by <a href="https://github.com/ChiselD" target="_blank">ChiselD</a></p>
     </footer>
 
