polish up media queries, remove testing code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Black Garlic</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -26,7 +26,7 @@
 
       <section>
 
-        <div id="facts" class="chunk cream">
+        <div id="facts" class="cream">
           <p>Black garlic is a type of aged garlic whose browning is attributable
             to Maillard reaction rather than caramelized, first used as a food
             ingredient in Asian cuisine. It is made by heating whole bulbs of
@@ -55,11 +55,11 @@
           <p><em>Information courtesy of <a href="https://en.wikipedia.org/wiki/Black_garlic">Wikipedia</a></em></p>
         </div>
 
-        <div id="videoholder" class="chunk">
+        <div id="videoholder">
           <iframe id="video" src="https://www.youtube.com/embed/uDuFURnmVlo" width="420" height="315"></iframe>
         </div>
 
-        <div id="formholder" class="chunk cream">
+        <div id="formholder" class="cream">
           <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
             <p>To subscribe and learn more about black garlic, enter your email address below.</p>
             <input id="email" type="email" name="email" value="" placeholder="Your Email" required>
